# lesezeichen

./: README.md  setup.cfg
.github/workflows/: buildandpublish.yml
lesezeichen/: __init__.py  cli.py  lesezeichen.py
tests/: test.py  test_lesezeichen.py
