[metadata]
name = lesezeichen
version = 0.0.5
author = Yoshtec
author_email = yoshtec@gmail.com
description = Lesezeichen 'lzn' organizes your bookmarks on the shell - fast and with shell completion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yoshtec/lesezeichen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
keywords =
    bookmark

[options]
packages = find:
install_requires =
    click>=8

python_requires = >=3.7

[options.entry_points]
console_scripts =
    lzn = lesezeichen.cli:cli